<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".view.LoginActivity">

    <TextView
        android:id="@+id/txt_insira_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/txt_seu_usuario"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_entrar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:background="@color/colorAccent"
        android:onClick="login"
        android:text="@string/txt_btn_entrar"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputLayout"
        tools:ignore="UsingOnClickInXml" />

    <TextView
        android:id="@+id/btn_sair_app"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="32dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:onClick="sair_app"
        android:text="@string/txt_sair_app"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_entrar"
        tools:ignore="UsingOnClickInXml" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@+id/btn_entrar"
        app:layout_constraintStart_toStartOf="@+id/btn_entrar"
        app:layout_constraintTop_toBottomOf="@+id/txt_insira_usuario">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="2"
            android:drawableStart="@drawable/ic_face"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/txt_nome_usuario"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>