<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".view.JogoActivity">

    <ImageView
        android:id="@+id/img_jogador_um"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintStart_toStartOf="@+id/img_pedra"
        app:layout_constraintTop_toBottomOf="@+id/txt_jogador_2"
        app:srcCompat="@drawable/img_vazio" />

    <ImageView
        android:id="@+id/img_jogador_dois"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintEnd_toEndOf="@+id/img_tesoura"
        app:layout_constraintTop_toBottomOf="@+id/txt_jogador_2"
        app:srcCompat="@drawable/img_vazio" />

    <TextView
        android:id="@+id/txt_jogador_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_jogador_um"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/img_jogador_um"
        app:layout_constraintStart_toStartOf="@+id/img_jogador_um"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_jogador_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_jogador_dois"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/img_jogador_dois"
        app:layout_constraintStart_toStartOf="@+id/img_jogador_dois"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_jogador_um" />

    <TextView
        android:id="@+id/txt_escolha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/escolha_opcao"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_resultado" />

    <ImageView
        android:id="@+id/img_pedra"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayoutNerd"
        app:srcCompat="@drawable/img_pedra" />

    <ImageView
        android:id="@+id/img_papel"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/img_tesoura"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toEndOf="@+id/img_pedra"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayoutNerd"
        app:srcCompat="@drawable/img_papel" />

    <ImageView
        android:id="@+id/img_tesoura"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayoutNerd"
        app:srcCompat="@drawable/img_tesoura" />

    <Button
        android:id="@+id/btn_jokenpo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/txt_btn_jokenpo"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/areaRadioGroup"
        tools:ignore="UsingOnClickInXml" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_versos"
        android:textStyle="bold"
        android:textSize="32sp"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@+id/txt_resultado"
        app:layout_constraintEnd_toStartOf="@+id/img_jogador_dois"
        app:layout_constraintStart_toEndOf="@+id/img_jogador_um"
        app:layout_constraintTop_toBottomOf="@+id/txt_jogador_2" />

    <RadioGroup
        android:id="@+id/areaRadioGroup"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_papel">

        <RadioButton
            android:id="@+id/radioButtonPedra"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="32dp"
            android:background="@drawable/custon_radio_button"
            android:button="@null" />

        <RadioButton
            android:id="@+id/radioButtonPapel"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="112dp"
            android:background="@drawable/custon_radio_button"
            android:button="@null" />

        <RadioButton
            android:id="@+id/radioButtonTesoura"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="105dp"
            android:background="@drawable/custon_radio_button"
            android:button="@null" />

    </RadioGroup>

    <!--ContrainLayout Nerd-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutNerd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/img_jogador_dois"
        app:layout_constraintStart_toStartOf="@+id/img_jogador_um"
        app:layout_constraintTop_toBottomOf="@+id/txt_escolha">

        <ImageView
            android:id="@+id/img_lagarto"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="64dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/img_spock"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_lagarto" />

        <ImageView
            android:id="@+id/img_spock"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="64dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_spock" />

        <RadioGroup
            android:id="@+id/areaRadioGroupNerd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/img_spock"
            app:layout_constraintStart_toStartOf="@+id/img_lagarto"
            app:layout_constraintTop_toBottomOf="@+id/img_lagarto">

            <RadioButton
                android:id="@+id/radioButtonLagarto"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="36dp"
                android:background="@drawable/custon_radio_button"
                android:button="@null" />

            <RadioButton
                android:id="@+id/radioButtonSpock"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="92dp"
                android:background="@drawable/custon_radio_button"
                android:button="@null" />

        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>